--- a/amazon.css
+++ b/amazon.css
@@ -69,6 +69,9 @@
     font-size: 1rem;
     border: none;
 }
+.search-input:focus{
+    outline: none;
+}
 .search-icon{
     width: 45px;
     display: flex;
@@ -161,6 +164,11 @@ span{
   background-color: white;
   padding: 20px 0px 15px; 
   margin-top: 15px;
+  transition: 1s;
+}
+.box:hover{
+    box-shadow: 5px 5px 30px;
+    transition: 1s ease-in-out;
 }
 
 .box-img{
@@ -200,6 +208,11 @@ footer{
     justify-content: space-evenly;
 }
 
+.foot-panel2 ul a:hover{
+    color: red;
+    text-decoration: underline;
+}
+
 ul{
     margin-top: 20px;
 }
@@ -208,6 +221,7 @@ ul a{
     font-size: 0.85rem;
     margin-top: 10px;
     color: #dddddd;
+    text-decoration: none;
 }
 
 .foot-panel3{
